[package]
name = "ohp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
clap = {version = "4.5.4",features = ["derive","cargo"]}
const_format = "0.2.32"
colored = "2.1.0"